# auto-driving-tec

./: CMakeLists.txt  README.md  build.sh  build_debug.sh  requirement.txt  setup.bash
common/: base.cpp  base.h  define.h
data/kitti/boxes/: 000142.txt
data/kitti/pcd/: 000142.pcd
data/ncut/pcd/: 300.pcd
data/robosense16/pcd/: 15.pcd
localization/: CMakeLists.txt
localization/ndt/: CMakeLists.txt  modify_cloud.cpp  ndt_map.cpp  ndt_map_creator.cpp  ndt_mapping.cpp
localization/ndt/common/: ndt_flags.cc  ndt_flags.h
localization/ndt/ndt_omp/: gicp_omp.cpp  ndt_omp.cpp  ndt_omp.h  ndt_omp_impl.hpp  voxel_grid_covariance_omp.cpp  voxel_grid_covariance_omp.h
localization/ndt/src/: async_buffer.cc  async_buffer.h
perception/: CMakeLists.txt
perception/NCutSegmentation/: CMakeLists.txt  main.cpp
perception/NCutSegmentation/common/: ncut_flags.cc  ncut_flags.h
perception/NCutSegmentation/conf/: ncut.conf
perception/NCutSegmentation/src/: floodfill.cpp  floodfill.h  ground_detector.cpp  ground_detector.h  ncut.cpp  ncut.h  ncut_segmentation.cpp  ncut_segmentation.h
perception/autoware_pointpillars/: CMakeLists.txt  inference_autoware.py  pfe_autoware.cpp  post_autoware.cpp
perception/autoware_pointpillars/src/: autoware_pointpillar.cpp  autoware_pointpillar.h
perception/common/: CMakeLists.txt
perception/common/bbox/: CMakeLists.txt  bounding_box.cpp  bounding_box.h  convex_hull_2d.h
perception/common/i_lib/: CMakeLists.txt
perception/common/i_lib/algorithm/: CMakeLists.txt  i_sort.h
perception/common/i_lib/core/: CMakeLists.txt  i_alloc.h  i_basic.h  i_blas.h  i_constant.h  i_rand.h
perception/common/i_lib/da/: CMakeLists.txt  i_ransac.h
perception/common/i_lib/geometry/: CMakeLists.txt  i_line.h  i_plane.h  i_rot.h  i_util.h
perception/common/i_lib/pc/: CMakeLists.txt  i_ground.cc  i_ground.h  i_struct_s.h  i_util.h
perception/lane_detect/: CMakeLists.txt  LaneDetector.cpp  lane_detector.py
perception/lane_detect/src/: lane_detect.cpp  lane_detect.h
perception/point_pillars/: CMakeLists.txt  batchToNpy.py  inference.py  pfe.cpp  post.cpp
perception/point_pillars/src/: anchor.cpp  anchor.h  pfe_process.cpp  pfe_process.h  pointpillarsnet.cpp  pointpillarsnet.h  post_process.cpp  post_process.h  pp_base.h  pre_process.cpp  pre_process.h  voxel.cpp  voxel.h
scripts/: autoware_point_pillars.sh  bin_to_pcd.sh  ndt_mapping.sh  point_pillar.sh  show_boxes.sh
tmp/kitti-1/boxes/: 6.txt
tmp/kitti-1/pcd/: 6.pcd
tools/: CMakeLists.txt  mapCreate.cpp
tools/py/: apollo_to_a1000.py
tools/src/: binToPcd.cpp  pcdToBin.cpp  showBoxes.cpp
